# mongo-db

./: .env  Cargo.toml  Dockerfile  README.md  compose.yml  db_setup.js
script/: api_test.http  db_test.js
src/main/: app.rs  lib.rs  main.rs
src/main/model/: mod.rs  new_event.rs
src/main/module/: greet.rs  mod.rs
src/main/services/api/v1/: event.rs  hello.rs  index.rs  mod.rs
src/main/storage/: db_config.rs  mod.rs  operations.rs
src/main/storage/config/: init.js
