[package]
name = "actix-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "actix_rs"
path = "src/main/lib.rs"

[[bin]]
name = "actix_rs"
path = "src/main/main.rs"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
dotenvy = "0.15.7"
once_cell = "1.20.2"
lazy_static = "1.5.0"
mongodb = "3.1.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tokio = "1.42.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
futures = "0.3.31"
